# COP-DROID

./: README.md
core-ai/: .dockerignore  .env.example  .gitignore  Dockerfile  config.py  detector.py  docker-compose.yml  main.py  models.py  pyproject.toml  requirements.txt  state.py
core-ai/routes/: api.py  stream.py  ws.py
core-ai/templates/: index.html
dashboard/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
dashboard/src/: App.tsx  index.css  types.ts
dashboard/src/api/: devices.ts
dashboard/src/components/: DeviceCard.tsx  EventLog.tsx  Header.tsx  LaserPanel.tsx  PersonAnalysisCard.tsx  PersonHistory.tsx  Radar180.tsx  StatusCard.tsx  VideoStream.tsx
dashboard/src/hooks/: useDevices.ts
firmware/cam/: compile_commands.json  platformio.ini
firmware/cam/include/: Camera.h  Config.h  Network.h
firmware/cam/src/: Camera.cpp  Network.cpp  main.cpp
firmware/engine/: compile_commands.json  platformio.ini
firmware/engine/include/: Config.h  DistanceSensor.h  MotorController.h  ObstacleAvoidance.h  ServoController.h  WebSocketControl.h  WifiControl.h
firmware/engine/src/: DistanceSensor.cpp  MotorController.cpp  ObstacleAvoidance.cpp  ServoController.cpp  WebSocketControl.cpp  WifiControl.cpp  main.cpp
